--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -18,3 +18,13 @@ Pos=71,15
 Size=373,295
 Collapsed=0
 
+[Window][Scene]
+Pos=49,155
+Size=339,122
+Collapsed=0
+
+[Window][Camera]
+Pos=60,60
+Size=339,99
+Collapsed=0
+
