シーンファクトリー

--- a/project/CG2_DirectXGame.vcxproj
+++ b/project/CG2_DirectXGame.vcxproj
@@ -122,6 +122,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="engine\base\SceneManager.cpp" />
+    <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="scene\BaseScene.cpp" />
     <ClCompile Include="engine\base\Audio.cpp" />
     <ClCompile Include="engine\base\Camera.cpp" />
@@ -159,7 +160,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractSceneFactory.h" />
     <ClInclude Include="engine\base\SceneManager.h" />
+    <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="scene\BaseScene.h" />
     <ClInclude Include="engine\base\Audio.h" />
     <ClInclude Include="engine\base\Camera.h" />
